--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text">Partnered with</span> 
                     </div>
                     <div class="col-sm-4 col-md-3">
-                        <img src="img/sl-logo-white.png" class="img-fluid" alt="ScaleLab">
+                        <a href="https://www.scalelab.com/apply/gaming?referral=40388" target="_blank"><img src="img/sl-logo-white.png" class="img-fluid" alt="ScaleLab"></a>
                     </div>
                 </div>
             				
@@ -74,7 +74,7 @@
                 <div class="row spaced">
                     <div class="col-md-4">
                         <p class="text">Donate to support my work</p>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                             <input type="hidden" name="cmd" value="_donations">
                             <input type="hidden" name="business" value="marko.idzan@markoidzan.com.hr">
                             <input type="hidden" name="lc" value="HR">
