Changed Facebook link and some preparations
New Facebook Page with way more likes and preparations for translating
site to Croatian

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 
                 <div class="row spaced">
                     <div class="col-md-3">
-                        <span class="text">Partnered with</span> 
+                        <span class="text">Partnered with</span>
+                        <!--<span class="text">Partner sa</span>-->
                     </div>
                     <div class="col-sm-4 col-md-3">
                         <a href="https://www.scalelab.com/apply/gaming?referral=40388" target="_blank"><img src="img/sl-logo-white.png" class="img-fluid" alt="ScaleLab"></a>
@@ -42,10 +43,11 @@
 				<div class="row spaced">
                     <div class="col-md-3 pull-md-3 ">
                     <p class="text">Find me on:</p>
+                        <!--<p class="text">Pronađite me na:</p>-->
                     </div>
                             
                             <div class="col-md-1 social-networks">
-                                <a href="https://www.facebook.com/Marko-Id%C5%BEan-midzan21-1763135017292254/" target="_blank"><img src="img/social/facebook64.png" class="img-fluid" alt="Facebook"></a>
+                                <a href="https://www.facebook.com/midzan21/" target="_blank"><img src="img/social/facebook64.png" class="img-fluid" alt="Facebook"></a>
                             </div>
                             <div class="col-md-1 social-networks">
                                 <a href="https://twitter.com/midzan21" target="_blank"><img src="img/social/twitter64.png" class="img-fluid" alt="Twitter"></a>
@@ -66,6 +68,7 @@
                 <div class="row spaced">
                     <div class="col-md-4">
                         <p class="text">Donate to support my work</p>
+                        <!--<p class="text">Donirajte da podržite moj rad</p>-->
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
                             <input type="hidden" name="cmd" value="_donations">
                             <input type="hidden" name="business" value="marko.idzan@markoidzan.com.hr">
